--- a/templates/img_render.html
+++ b/templates/img_render.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rendering Local Images Using Flask</title>
-</head>
-<body>
-<img src= "{{url_for('static', filename='/Image/imatge.jpg')}}" >
-</body>
+<!doctype html>
+<html>
+  <head>
+    <title>File Upload</title>
+  </head>
+  <body>
+    <h1>File Upload</h1>
+    <form method="POST" action="" enctype="multipart/form-data">
+      <p><input type="file" name="file"></p>
+      <p><input type="submit" value="Submit"></p>
+    </form>
+  </body>
 </html>
