--- a/templates/result.html
+++ b/templates/result.html
@@ -4,8 +4,8 @@
     <title>Imatge enviada</title>
   </head>
   <body>
-    Imatge enviada.
+    Imatge enviada. <br>
     
-    I like the animal: {{ resultat }}
+    Resultat {{ resultat }}
   </body>
 </html>
