--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,11 @@
     <title>File Upload</title>
   </head>
   <body>
+    <h1>Choose the room you want to improve:</h1>
+    <form method="POST" action="" >
+      <button type="submit" name="Kitchen" value="value1">Kitchen</button>
+      <button type="submit" name="Bathroom" value="value2" formtarget="_blank">Bathroom</button>
+    </form>
     <h1>File Upload</h1>
     <form method="POST" action="" enctype="multipart/form-data">
       <p><input type="file" name="file"></p>
