--- a/templates/kitchen.html
+++ b/templates/kitchen.html
@@ -4,10 +4,12 @@
     <title>You are in the kitchen!</title>
   </head>
   <body>
-    <h1>In the kitchen, there are the following items that can be improved:</h1>
-    <form method="POST" action="" >
+    <h1>In the kitchen, these are the items that can be improved:</h1>
+    <form method="POST" action="/fridge" >
       <button type="submit" name="fridge" value="value1">Fridge</button>
-      <button type="submit" name="Bathroom" value="value2" formtarget="_blank">Stove</button>
+    </form>
+    <form method="POST" action="/stove" >
+      <button type="submit" name="stove" value="value2" formtarget="_blank">Stove</button>
     </form>
   </body>
 </html>
