--- a/templates/result.html
+++ b/templates/result.html
@@ -5,7 +5,11 @@
   </head>
   <body>
     Imatge enviada. <br>
+
+    Modificació: {{cerca}} <br>  
     
-    Resultat {{ resultat }}
+    Resultat fotografia original: {{ score_original }} <br>
+
+    Resultat fotografia modificada: {{ score1 }} <br>
   </body>
 </html>
