--- a/templates/result.html
+++ b/templates/result.html
@@ -8,8 +8,14 @@
 
     Modificació: {{cerca}} <br>  
     
-    Resultat fotografia original: {{ score_original }} <br>
+    Resultat fotografia original: {{ score0 }} <br>
 
-    Resultat fotografia modificada: {{ score1 }} <br>
+    Resultat fotografia 1: {{ score1 }} <br>
+    Resultat fotografia 2: {{ score2 }} <br>
+    Resultat fotografia 3: {{ score3 }} <br>
+    Resultat fotografia 4: {{ score4 }} <br>
+
+
+    <img src= "{{image}}" >
   </body>
 </html>
