--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>File Upload</title>
   </head>
   <body>    
-    <h1>File Upload</h1>
+    <h1>Write your prompt and select your photo</h1>
     <form method="POST" action="" enctype="multipart/form-data">
       <input name="prova">
       <p><input type="file" name="file"></p>
