--- a/templates/result.html
+++ b/templates/result.html
@@ -33,5 +33,8 @@
       </tr>
       </tbody>
     </table>
+    <form method="POST" action="" enctype="multipart/form-data">
+      <p><input type="submit" value="Return to main page"></p>
+    </form>
   </body>
 </html>
