--- a/templates/result.html
+++ b/templates/result.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>Imatge enviada</title>
+    <title>Image sent.</title>
   </head>
   <body>
-    <h1>Imatge enviada.</h1>
-    <p>Modificació: {{cerca}}</p>
+    <h1>Image sent.</h1>
+    <p>Prompt: {{cerca}}</p>
     <h2>Original:</h2>
     <p><img src="{{img_original}}" /></p>
     <p style="font-size: 1.5em;">Score: {{score0}}</p>
